--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "debug": "^4.3.1",
     "express": "^4.17.1",
+    "http-errors": "^1.8.0",
+    "jade": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.14"
+    "mongoose": "^5.11.14",
+    "morgan": "^1.10.0"
   }
 }
