--- a/back-end/package.json
+++ b/back-end/package.json
@@ -16,6 +16,8 @@
     "cors": "^2.8.5",
     "debug": "^4.3.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.14"
     "http-errors": "^1.8.0",
     "jade": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
