--- a/front-end/tech/package.json
+++ b/front-end/tech/package.json
@@ -8,11 +8,14 @@
     "@testing-library/user-event": "^12.6.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "jquery": "^3.5.1",
+    "peer": "^0.6.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "tsutils": "^3.20.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
