--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jade": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.14",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "path": "^0.12.7"
   }
 }
